erDiagram
    CUSTOMERS ||--o{ WALLETS : owns
    CUSTOMERS ||--o{ KYC_CASES : "has"
    CUSTOMERS ||--o{ USER_ROLES : "assigned"
    CUSTOMERS ||--o{ REFRESH_TOKENS : "holds"

    WALLETS ||--o{ LEDGER_ENTRIES : "records"
    WALLETS ||--o{ TRANSFERS : "source/dest"

    TRANSACTIONS ||--|{ LEDGER_ENTRIES : "posts"
    TRANSACTIONS ||--o| TRANSFERS : "settles"
    TRANSACTIONS ||--o| TRANSACTIONS : "reverses"

    ROLES ||--o{ ROLE_PERMISSIONS : "grants"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "in"
    ROLES ||--o{ USER_ROLES : "mapped"

    CUSTOMERS {
        uuid id PK
        citext email UK
        text phone UK
        enum status "PENDING|ACTIVE|SUSPENDED|CLOSED"
        enum kyc_status "NOT_STARTED|PENDING|VERIFIED|REJECTED"
        timestamptz created_at
    }
    WALLETS {
        uuid id PK
        uuid customer_id FK
        char currency "ISO 4217"
        enum status "ACTIVE|FROZEN|CLOSED"
        timestamptz created_at
    }
    TRANSACTIONS {
        uuid id PK
        enum type "CREDIT|DEBIT|HOLD|RELEASE|REVERSAL"
        enum status "PENDING|POSTED|FAILED|REVERSED"
        text idempotency_key UK
        uuid reverses_id FK
        jsonb metadata
        timestamptz created_at
    }
    LEDGER_ENTRIES {
        uuid id PK
        uuid transaction_id FK
        uuid wallet_id FK
        enum direction "DEBIT|CREDIT"
        numeric amount "NUMERIC(20,4)"
        timestamptz created_at
    }
    TRANSFERS {
        uuid id PK
        uuid source_wallet FK
        uuid dest_wallet FK
        numeric amount
        enum status "PENDING|COMPLETED|FAILED"
        uuid transaction_id FK
        timestamptz created_at
    }
    KYC_CASES {
        uuid id PK
        uuid customer_id FK
        enum status "PENDING|VERIFIED|REJECTED"
        text vendor_ref
        uuid decided_by
        timestamptz decided_at
    }
    AUDIT_RECORDS {
        uuid id PK
        uuid actor_id
        text action
        text entity_type
        uuid entity_id
        jsonb before
        jsonb after
        text trace_id
        timestamptz created_at
    }
    ROLES {
        uuid id PK
        text name UK
    }
    PERMISSIONS {
        uuid id PK
        text name UK
    }
    ROLE_PERMISSIONS {
        uuid role_id FK
        uuid permission_id FK
    }
    USER_ROLES {
        uuid user_id FK
        uuid role_id FK
    }
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        text token_hash
        enum status "ACTIVE|ROTATED|REVOKED"
        uuid rotated_from
        timestamptz expires_at
    }
    OUTBOX {
        uuid id PK
        text aggregate_type
        text event_type
        jsonb payload
        boolean published
        timestamptz created_at
    }
